# ios-backup-extractor

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  setup.py
NSKeyedUnArchiver-upstream/: README.md  SECURITY_ISSUES_TODO.md  pyproject.toml
NSKeyedUnArchiverLocal/: __init__.py
docs/: conf.py
extractors/: _contacts.py  all.py  contacts.py  convert_heic.py  messages.py  voicemails.py
iOSbackup/: __init__.py  _crypto.py  _util.py
tests/: test_all.py  test_contacts.py  test_contacts_index.py  test_convert_heic.py  test_messages.py  test_voicemails.py
