[project]
name = "ios-backup-extractor"
description = "Reads and extracts files from password-encrypted iOS backups"
readme = "README.md"
license-files = [ "LICENSE" ]
requires-python = ">=3.7"
authors = [
    { name = "Keegan Leitz", email = "kjleitz@gmail.com" },
]
dynamic = ["version"]

dependencies = [
    "pycryptodome",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS",
    "Operating System :: iOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Topic :: Database",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Recovery Tools",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/kjleitz/ios-backup-extractor"
Source = "https://github.com/kjleitz/ios-backup-extractor"
Issues = "https://github.com/kjleitz/ios-backup-extractor/issues/new/choose"

[tool.setuptools.packages.find]
include = ["iOSbackup*", "NSKeyedUnArchiverLocal*"]

[tool.setuptools.dynamic]
version = {attr = "iOSbackup.__version__"}

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
